fix container overflow

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   border-radius: 20px;
   padding: 20px;
   box-shadow: 0 0 6px 1px #ababab;
+  overflow-y: hidden;
   transition: height 0.3s;
 }
 
